<?xml version="1.0" encoding="utf-8"?>
<!--    With Linear Layout It's much easier to change position of elements-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.onboardwelcome">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/welcome_to_our_shop"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hi_there_take_a_look_in_our_awesome_store_we_have_big_sales_all_time_have_a_good_day"
            android:textAlignment="center"
            android:textSize="34sp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/welcom"
            android:src="@drawable/images" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnnext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom"
        android:layout_margin="20dp"
        android:background="#4CAF50"
        android:clickable="true"
        android:contentDescription="@string/next"
        android:focusable="true"
        android:src="@android:drawable/ic_media_play"
        app:backgroundTint="#4CAF50"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

</FrameLayout>