<?xml version="1.0" encoding="utf-8"?>
<!--    With Linear Layout It's much easier to change position of elements-->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.addshoe">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/add_shoe"
                android:textAlignment="center"
                android:textSize="34sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblname"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/name"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/txtname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    tools:ignore="SpeakableTextPresentCheck"
                    android:autofillHints="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblcompany"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/company"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/txtcompany"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    tools:ignore="SpeakableTextPresentCheck"
                    android:autofillHints="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblsize"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/size"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/txtnum"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:ems="10"
                    android:inputType="number"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lbldescription"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/description"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/lbldesc"
                    android:layout_width="0dp"
                    android:layout_height="180dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:ems="10"
                    android:inputType="textMultiLine|textImeMultiLine"
                    tools:ignore="SpeakableTextPresentCheck" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="40dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnsave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="#4CAF50"
                    android:text="@string/save" />

                <Button
                    android:id="@+id/btncancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:background="#4CAF50"
                    android:text="@string/cancel" />
            </LinearLayout>

        </LinearLayout>
    </FrameLayout>
</layout>